--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,3 +129,12 @@ body,
     @apply bg-background text-foreground;
   }
 }
+
+/* Tiptap Placeholder */
+.ProseMirror p.is-editor-empty:first-child::before {
+  color: #adb5bd;
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
+}
